# Knowledge-Bot

./: .dockerignore  .env.example  .env.notion.example  .gitattributes  .gitignore  CLEANUP_SUMMARY.md  CODE_ANALYSIS_AND_FIXES.md  COMPLETE_ANALYSIS_REPORT.md  COMPLETE_MODEL_FIXES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FIXES_COMPLETE_SUMMARY.md  FIXES_IMPLEMENTED.md  FIXES_SUMMARY.md  GEMINI_SDK_UPDATE.md  LICENSE  MIGRATION_GUIDE.md  PRIVATE_REPOSITORY_SETUP.md  PRODUCTION_FIX_COMPLETE.md  PRODUCTION_READY.md  Procfile  QUICK_START.md  RAILWAY_API_FIX.md  RAILWAY_FIX.md  RAILWAY_PARAMETER_ALIGNMENT.md  RAILWAY_PROTOCOL_FIX.md  README.md  README_ENHANCED.md  README_backup.md  TIKTOK_FORMAT_DEBUG.md  VERIFICATION_GUIDE.md  VERIFICATION_REPORT.md  app.py  app_debug.py  apply_automated_fixes.py  cleanup_repo.sh  config.py  debug_railway.py  (+17 more)
.github/: copilot-instructions.md
bot/: __init__.py  interactive_category_system.py  main.py  middleware.py
bot/handlers/: __init__.py  video_handler.py  video_handler_FIXED.py
core/: pipeline.py
core/models/: content_models.py
core/processors/: banana_processor.py  claude_processor.py  gemini_processor.py  gpt_processor.py
services/: __init__.py  claude_service.py  enhanced_claude_service.py  gemini_service.backup_20250930_143822.py  gemini_service.py  git_sync.py  gpt_service.py  image_generation_service.py  railway_client.py
storage/: __init__.py  book_storage.py  markdown_storage.py  notion_storage.py  railway_storage.py
utils/: helpers.py  retry_utils.py
(+1 files in other folders)
