[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-bot"
version = "1.0.0"
description = "A Telegram bot that processes TikTok/Instagram videos and builds a knowledge base"
authors = [{name = "silvioiatech"}]
dependencies = [
    "aiogram==3.5.0",
    "httpx==0.27.0",
    "google-generativeai>=0.7.0,<1.0.0",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "pydantic==2.5.0",
    "aiofiles==23.2.1",
    "pyyaml==6.0.1",
]
requires-python = ">=3.9"

[project.scripts]
knowledge-bot = "main:main"