[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-bot"
version = "1.0.0"
description = "A Telegram bot that transforms TikTok/Instagram videos into knowledge base entries"
authors = [{name = "silvioiatech"}]
dependencies = [
    "aiogram==3.5.0",
    "httpx==0.27.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "pydantic==2.6.1",
    "aiofiles==23.2.1",
]
requires-python = ">=3.9"

[project.scripts]
knowledge-bot = "app:main"